# HaruKoto

./: .gitignore  .gitleaks.toml  AGENTS.md  CLAUDE.md  README.md  fake-leak-test.txt  package.json  pnpm-lock.yaml  turbo.json
apps/api/: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/api/alembic/: README.md  env.py
apps/api/app/: config.py  dependencies.py  enums.py  error_handlers.py  exceptions.py  main.py
apps/api/openapi/: openapi.json
apps/api/scripts/: apply_n4_audio_qa_verdicts.py  audit_n4_flag_post_regeneration_audio.py  audit_n4_pilot_tts_audio_quality.py  build_n4_audio_qa_bucket_review.py  build_n4_audio_qa_current_tts_review.py  build_n4_audio_qa_delegated_pending_clearance.py  build_n4_audio_qa_flag_regeneration_plan.py  build_n4_audio_qa_high_risk_listening_batch.py  build_n4_audio_qa_p0_provider_fallback_clearance.py  build_n4_audio_qa_packet.py  build_n4_audio_qa_pass_candidates.py  build_n4_audio_qa_residual_flag_adjudication.py  build_n4_audio_qa_review_queue.py  build_n4_audio_qa_stt_reconciliation.py  export_openapi.py  generate_n4_pilot_tts_batch.py  regenerate_n4_audio_qa_flagged_tts.py  report_lesson_pilot_feedback.py  report_n4_audio_qa_verdicts.py  report_n4_pilot_tts_coverage.py  smoke_lesson_flow.py  validate_admin_contracts.py  validate_mobile_contracts.py
apps/api/tests/: conftest.py  test_admin_audit_logs_service.py  test_admin_auth_dependency.py  test_admin_batch_review_service.py  test_admin_content.py  test_admin_content_detail_service.py  test_admin_content_edit.py  test_auth.py  (+96 more)
(+1577 files in other folders)
