[project]
name = "harukoto-api"
version = "0.1.0"
description = "HaruKoto Japanese Learning App - FastAPI Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "redis>=5.2",
    "google-genai>=1.0",
    "google-cloud-storage>=2.19",
    "lameenc>=1.7",
    "pywebpush>=2.0",
    "python-multipart>=0.0.18",
    "python-dateutil>=2.9.0.post0",
    "pyjwt[crypto]>=2.9",
    "sentry-sdk[fastapi]>=2.54.0",
    "elevenlabs>=2.39.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "mypy>=1.14",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 140

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]
ignore = [
    "B008",   # Depends() in function defaults — FastAPI 패턴
    "E402",   # module level import not at top — main.py 구조상 필요
    "UP042",  # str + Enum → StrEnum 마이그레이션은 별도 PR로 진행
]

[tool.ruff.lint.per-file-ignores]
"app/main.py" = ["E402", "F401"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
